# obs-preview-plugin

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  git-push-all.bat
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
docs/: mobile-validation.md  performance-measurement.md
installer/: obs-lan-preview.iss
scripts/: bump-version.ps1  generate-release-notes.ps1  measure-obs-performance.ps1  package-windows.ps1  publish-github-release.ps1  setup-windows-dev.ps1  test-release-notes.ps1  verify-https-preview.ps1
src/: capture_pacing.hpp  frame_capture.cpp  frame_capture.hpp  jpeg_encoder.cpp  jpeg_encoder.hpp  mjpeg_http_server.cpp  mjpeg_http_server.hpp  plugin-main.cpp  settings.cpp  settings.hpp  settings_dialog.cpp  settings_dialog.hpp  tls_certificate.cpp  tls_certificate.hpp  tls_connection.cpp  tls_connection.hpp
tests/: settings_tests.cpp
